Map coloring correction an map onClick lists right airspaces in area

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/tab_home"
                 android:src="@drawable/ic_home"
                 android:contentDescription="@string/tab_home"
+                android:background="@drawable/bck_tab_selected"
                 />
 
             <ImageButton
