--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="padding_snack_topbottom">14dp</dimen>
     <dimen name="big_text">32sp</dimen>
     <dimen name="row_big_text">20sp</dimen>
+    <dimen name="row_medium_text">18sp</dimen>
     <dimen name="row_small_text">16sp</dimen>
     <dimen name="row_xsmall_text">12sp</dimen>
 
@@ -34,4 +35,5 @@
     <dimen name="row_big_height">72dp</dimen>
     <dimen name="list_icon_margin">12dp</dimen>
     <dimen name="graph_height">400dp</dimen>
+
 </resources>
