--- a/app/src/main/res/layout/detail_dialog_list_item.xml
+++ b/app/src/main/res/layout/detail_dialog_list_item.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/row_padding"
     android:layout_centerVertical="true"
     android:background="?attr/backgroundColor"
-    android:layout_marginTop="@dimen/row_divider"
+    android:layout_marginBottom="@dimen/row_divider"
     android:gravity="center_vertical"
     android:clickable="true"
     android:elevation="@dimen/elevation_8">
