--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="elevation_4">4dp</dimen>
     <dimen name="row_height">48dp</dimen>
     <dimen name="row_padding">16dp</dimen>
+    <dimen name="row_padding_small">8dp</dimen>
     <dimen name="row_divider">2dp</dimen>
     <dimen name="elevation_16">16dp</dimen>
     <dimen name="elevation_12">12dp</dimen>
@@ -35,5 +36,7 @@
     <dimen name="row_big_height">72dp</dimen>
     <dimen name="list_icon_margin">12dp</dimen>
     <dimen name="graph_height">400dp</dimen>
+
+    <dimen name="wind_graph_size">196dp</dimen>
 
 </resources>
